<resources>
    <string name="app_name">Q&amp;A</string>
    <string name="sign_up">Sign Up</string>
    <string name="here">Here</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="register">Register</string>
    <string name="text">Already Have an Account? Login Here</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log-In</string>
    <string name="text2">Don\'t Have an Account? Sign-Up Here</string>
    <string name="coding">Coding</string>
    <string name="text1">Start a new Journey</string>
    <string name="c">C</string>
    <string name="plusplus">C++</string>
    <string name="python">Python</string>
    <string name="html">HTML</string>
    <string name="kotlin">Kotlin</string>
    <string name="java">Java</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rohitghate10431_gmail_com">rohitghate10431@gmail.com</string>
    <string name="facebook_page">Follow on Facebook</string>
    <string name="communication">Communication</string>
    <string name="nav_rate">Rate or Feedback</string>
    <string name="nav_share">Share</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="website">Visit Website</string>
    <string name="more">More</string>
    <string name="_0_20">0/20</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="cop">C</string>
    <string name="d">D</string>
    <string name="next">NEXT</string>
    <string name="quit">QUIT</string>
    <string name="your_score">Your Score</string>
    <string name="_0">0</string>
    <string name="question">Question</string>
    <string name="large_text">Large Text</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="final_score">Final Score</string>
    <string name="restart">Restart</string>
</resources>