<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alegreya_sans_extrabold"
        android:text="@string/sign_up"
        android:textColor="#5ED5E4"
        android:textSize="45sp"
        app:flow_verticalBias="0.07"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bgbody"
        android:id="@+id/fullname"
        android:layout_marginStart="16dp"
        android:drawablePadding="15dp"
        android:textColorHighlight="@color/black"
        android:drawableLeft="@drawable/baseline_person_2_24"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D4D4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintVertical_bias="0.139"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:background="@drawable/bgbody"
        android:drawablePadding="15dp"
        android:textColorHighlight="@color/black"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D4D4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        app:layout_constraintVertical_bias="0.139"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:background="@drawable/bgbody"
        android:drawablePadding="15dp"
        android:textColorHighlight="@color/black"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:textSize="20sp"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D4D4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.139"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:background="@drawable/bgbody"
        android:drawablePadding="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColorHighlight="@color/black"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/baseline_vpn_key_24"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#D8D4D4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.139"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:id="@+id/signup"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:backgroundTint="#00E2FF"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createText"
        android:layout_marginTop="18dp"
        android:text="@string/text"
        android:textColor="#E91E63"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        style="?android:actionBarTabBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createText"
        app:layout_constraintVertical_bias="0.26"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>